Closed
Bug 241710
Opened 21 years ago
Closed 21 years ago
nsILocalFile.getRelativeDescriptor(null) crashes
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
(Keywords: crash)
Attachments
(2 files)
|
873 bytes,
text/plain
|
Details | |
|
556 bytes,
patch
|
dougt
:
review+
|
Details | Diff | Splinter Review |
crashes on linux and windows2000
Attachment #147035 -
Flags: review?(dougt)
Comment 3•21 years ago
|
||
Comment on attachment 147035 [details] [diff] [review]
ensure pointer
r=. Also edit the IDL to declare passing a NULL value as the |fromFile| has an
undefined result.
Attachment #147035 -
Flags: review?(dougt) → review+
Updated•21 years ago
|
Severity: normal → critical
mozilla/xpcom/io/nsLocalFileCommon.cpp 1.44
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•