Bug 241710 nsILocalFile.getRelativeDescriptor(null) crashes r=dougt